--- a/index.html
+++ b/index.html
@@ -1,1 +1,228 @@
 # hello-world
+<html>
+
+<head>
+
+<title>Worms</title>
+
+</head>
+
+<body>
+
+<head>They are good
+
+<h1>Slippery friends</h1>
+
+</header> 
+
+<ol>
+
+<li>eat dirt</li>
+
+<li>good for garden</li>
+
+<li>lots of organs</li>
+
+</ol>
+
+<footer>
+
+That is all 
+
+</footer>
+
+</body
+
+</html>
+<a HREF=”https://www.youtube.com/watch?v=dQw4w9WgXcQ”>Please work</a>
+<title>Fun Frog Facts!</title>
+<h1>Fun facts about frogs</h1>
+
+<nav>
+
+	<h2>Menu</h2>
+	<a href = "#facts">Facts</a>
+	<a href = "#proof">Proof</a>
+
+</nav>
+
+<div id = "facts"> 
+	
+	<h2>Facts</h2>
+	
+	<h3>Control time</h3>
+	<h3>See everything</h3>
+	<h3>Were here before us and will be here after</h3>
+	<h3>Eat bug</h3>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div id = "proof">
+
+<h2>Proof</h2>
+
+<img src = "https://s7d2.scene7.com/is/image/PetSmart/4032873?$pdp-placeholder-desktop$" alt="image of a very polite frog" />
+</div>
+
+<h3>Just look at the polite gentelman!!</h3>
+<a href="https://www.youtube.com/"><img src = "./documents/ooh2.png" /></a>
+<html> <body> <ul> <li><a href="./2021-2022 html course/Lesson1.html">Lesson 1</a></li> <li><a href="./lessons/Lesson2.html">Lesson 2</a></li> </ul> </body> </html>
+<video width="320" height="240" controls>
+
+<source src="bedroomafterthewar2timelapse.mp4" type="video/mp4">
+
+</video>
+<html>
+
+
+It's worm time babey.
+R u n
+
+
+</html>
+<html>
+
+
+<h1>Heading1</h1>
+
+<2>Heading2</h2>
+
+<h3>God has let me live another day and I am going to make it everyone's problem</h3>
+
+<h4>Heading 4 </h4>
+
+<h5>Heading 5 </h5>
+
+<h6>Heading 6 </h6>
+
+</html>
+<html>
+
+<h1>Why geese are the devil incarnate</h1>
+
+<p> I mean have you seen those things?</p>
+
+
+<p>
+
+Have you heard them HONK??
+
+</p>
+
+
+<p>	
+
+	Have you ever looked into a gooses' eyes? There is no soul behind
+thoses eyes. Only SIN
+
+</p>
+<html>
+
+<head>
+
+<title>The revolution</title>
+
+</head>
+
+<body>
+
+<h1>Geese are going to rise up</h1>
+
+<p>There is nothing we can do to stop them. It is already too late. We are on the brink of changing times.</p>
+
+</body>
+
+</html>
+<html>
+
+<body>
+
+<ol>
+
+<li>Varean</li>
+
+<li>Vitae</li>
+
+<li>Caelik</li>
+
+<li>Solis</li>
+
+<li>Sidus</li>
+
+<li>Altum</li>
+
+<li>Igneum</li>
+
+</ol>
+
+</body>
+
+</html>
