--- a/Lesson9 and 10.html
+++ b/Lesson9 and 10.html
@@ -1,4 +1,5 @@
 <title>Fun Frog Facts!</title>
+<link href=”./style.css” type=”text/css” rel=”stylesheet” />
 <h1>Fun facts about frogs</h1>
 
 <nav>
@@ -24,7 +25,6 @@
 
 
 
-<link href=”./atom.css” type=”text/css” rel=”stylesheet” />
 
 
 
